Updated jQuery version in example

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html lang="en">
 	    <head>
-		<meta charset=utf-8 />
+		<meta charset='utf-8' />
 		<title>jQuery Blend</title>
 		<style>
 			*{padding:0; border:0; margin:0;}
@@ -45,7 +45,7 @@
 			#example_contact{background-position:-450px 0;}
 			#example_contact:hover,#example_contact.hover{background-position:-450px -48px;}
 		</style>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 		<script src="jquery.blend-min.js"></script>
 		<script>
 			$(document).ready(function(){
