--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,8 @@
 			*{padding:0; border:0; margin:0;}
 			h2{font-size:12px; margin-bottom:5px; color:#333; font-weight:normal; font-family:verdana, sans-serif; }
 			
-			#demo a{
+			#default a,
+			#example a{
 				display:block;
 				width:90px;
 				height:46px;
@@ -18,6 +19,7 @@
 				cursor:pointer;
 				text-indent:-9999px;
 			}
+
 			#default, #example{clear:left; overflow:auto; margin-bottom:20px;}
 			#default_home{background-position:0 0;}
 			#default_home:hover,#default_home.hover{background-position:0 -48px;}
@@ -44,12 +46,29 @@
 			#example_services:hover,#example_services.hover{background-position:-360px -48px;}
 			#example_contact{background-position:-450px 0;}
 			#example_contact:hover,#example_contact.hover{background-position:-450px -48px;}
+
+			#example2 a{
+				display:block;
+				margin-right:3px;
+				float:left;
+				background: #3d3db2;
+				cursor:pointer;
+				padding: 0 15px;
+				color: #ddd;
+				line-height: 46px;
+				font-size: 18px;
+				text-decoration: none;
+			}
+			#example2 a:hover, #example2 a.hover {
+				background: #1c1c1c;
+			}
 		</style>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-		<script src="jquery.blend-min.js"></script>
+		<script src="jquery.blend.js"></script>
 		<script>
 			$(document).ready(function(){
 				$("#example a").blend();
+				$("#example2 a").blend();
 			});
 		</script>
 	</head>
@@ -73,6 +92,16 @@
 				<a href="#" id="example_about">About</a>
 				<a href="#" id="example_services">Services</a>
 				<a href="#" id="example_contact">Contact</a>
+			</div>
+		
+			<div id="example2">
+				<h2>Blend Applied</h2>
+				<a href="#" id="example2_home">Home</a>
+				<a href="#" id="example2_blog">Blog</a>
+				<a href="#" id="example2_demo">Demo</a>
+				<a href="#" id="example2_about">About</a>
+				<a href="#" id="example2_services">Services</a>
+				<a href="#" id="example2_contact">Contact</a>
 			</div>
 		</div>
 	</body>
